Trying something else
Waiver buttons dont click on mobile. Changed them to anchors.

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
         </div>
 
         <div style="position: absolute; left: 38.5%; top: 59vw;">
-          <button id="showWaiverButton"class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</button>
+          <a id="showWaiverButton"class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</a>
         </div>
 
         <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
           <figure id="waiverFigure">
             <img src="Images/Waiver.jpg" style="width: 100%; height: 85%; position: absolute; left: 0; top: 0;" alt="">
-            <div style="position: abosolute; top: 85%; left: 23%;"><button class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;" type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</button></div>
+            <div style="position: abosolute; top: 85%; left: 23%;"><a class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;" type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</a></div>
           </figure>
         </div>
 
