--- a/index.html
+++ b/index.html
@@ -128,92 +128,86 @@
     </div>
 
     <!-- REGISTER SECTION //-->
-    <div id="Register" style="width: 100%; height; 83.2vw; position: relative;">
-      <img src="Images/Register.jpg" alt="" style="width: 100%; height: 100%;">
+    <div style="width: 100%; height: 125vw;">
+      <div id="Register" style="width: 100%; height; 83.2vw; position: relative;">
+        <img src="Images/Register.jpg" alt="" style="width: 100%; height: 100%;">
 
 
-      <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" onsubmit="return checkForm();" method="post">
-        <div style="top: 13.6vw">
-          <label for="one">FIRST NAME:</label>
-          <input id="one" type="text" name="entry.499612536" value="">
-        </div>
+        <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" onsubmit="return checkForm();" method="post">
+          <div style="top: 13.6vw">
+            <label for="one">FIRST NAME:</label>
+            <input id="one" type="text" name="entry.499612536" value="">
+          </div>
 
-        <div style="top: 17.6vw">
-          <label for="two">LAST NAME:</label>
-          <input id="two" type="text" name="entry.1147093671" value="">
-        </div>
+          <div style="top: 17.6vw">
+            <label for="two">LAST NAME:</label>
+            <input id="two" type="text" name="entry.1147093671" value="">
+          </div>
 
-        <div style="top: 21.4vw">
-          <label for="three">NICKNAME:</label>
-          <input id="three" type="text" name="entry.1426353177" value="">
-        </div>
+          <div style="top: 21.4vw">
+            <label for="three">NICKNAME:</label>
+            <input id="three" type="text" name="entry.1426353177" value="">
+          </div>
 
-        <div style="top: 25.2vw">
-          <label for="four">BIRTHDAY:</label>
-          <input id="four" type="text" name="entry.1394554624" placeholder="MM/DD/YYYY" value="">
-        </div>
+          <div style="top: 25.2vw">
+            <label for="four">BIRTHDAY:</label>
+            <input id="four" type="text" name="entry.1394554624" placeholder="MM/DD/YYYY" value="">
+          </div>
 
-        <div style="top: 29.2vw">
-          <label for="five">HEIGHT:</label>
-          <input id="five" type="text" name="entry.773130504" placeholder="5'11" value="">
-        </div>
+          <div style="top: 29.2vw">
+            <label for="five">HEIGHT:</label>
+            <input id="five" type="text" name="entry.773130504" placeholder="5'11" value="">
+          </div>
 
-        <div style="top: 33vw">
-          <label for="six">HIGH SCHOOL:</label>
-          <input id="six" type="text" name="entry.1883860782" value="">
-        </div>
+          <div style="top: 33vw">
+            <label for="six">HIGH SCHOOL:</label>
+            <input id="six" type="text" name="entry.1883860782" value="">
+          </div>
 
-        <div style="top: 37.1vw">
-          <label for="eight">INSTAGRAM HANDLE:</label>
-          <input id="eight" type="text" name="entry.1937532379" value="">
-        </div>
+          <div style="top: 37.1vw">
+            <label for="eight">INSTAGRAM HANDLE:</label>
+            <input id="eight" type="text" name="entry.1937532379" value="">
+          </div>
 
-        <div style="top: 40.9vw">
-          <label for="nine">MOBILE:</label>
-          <input id="nine" type="text" name="entry.2009092416" value="">
-        </div>
+          <div style="top: 40.9vw">
+            <label for="nine">MOBILE:</label>
+            <input id="nine" type="text" name="entry.2009092416" value="">
+          </div>
 
-        <div style="top: 44.8vw">
-          <label for="ten">EMAIL:</label>
-          <input id="ten" type="text" name="entry.1172271377" value="">
-        </div>
+          <div style="top: 44.8vw">
+            <label for="ten">EMAIL:</label>
+            <input id="ten" type="text" name="entry.1172271377" value="">
+          </div>
 
-        <div style="position: absolute; left: 38.5%; top: 59vw;">
-          <a id="showWaiverButton"class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</a>
-        </div>
+          <div style="position: absolute; left: 38.5%; top: 59vw;">
+            <a id="showWaiverButton"class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</a>
+          </div>
 
-        <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
-          <figure id="waiverFigure">
-            <img src="Images/Waiver.jpg" style="width: 100%; height: 85%; position: absolute; left: 0; top: 0;" alt="">
-            <div style="position: abosolute; top: 85%; left: 23%;"><a class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;" type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</a></div>
-          </figure>
-        </div>
+          <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
+            <figure id="waiverFigure">
+              <img src="Images/Waiver.jpg" style="width: 100%; height: 85%; position: absolute; left: 0; top: 0;" alt="">
+              <div style="position: abosolute; top: 85%; left: 23%;"><a class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;" type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</a></div>
+            </figure>
+          </div>
 
-        <div id="submitDiv" style="position: absolute; top: 63vw; left: 37.5vw; display: none;"><button class="RegistrationButtons" id="submitButton" type="submit">SUBMIT</button></div>
-        <div id="alert" style="position: absolute; top: 69vw; left: 30vw; color: red; display: none; font-family: MyriadProItalic; font-size: 1.5vw;">*Make sure every field is filled out before submitting*</div>
-      </form>
-
-
-      <div style="position: absolute; left: 27%; top: 5vw;">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="857VUCYM69CMQ">
-          <button class="RegistrationButtons" type="submit" name="submit">Click Here To Pay Before You Register</button>
-          <!-- <input type="image" src="Images/Paymentbutton.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
-          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          <div id="submitDiv" style="position: absolute; top: 63vw; left: 37.5vw; display: none;"><button class="RegistrationButtons" id="submitButton" type="submit">SUBMIT</button></div>
+          <div id="alert" style="position: absolute; top: 69vw; left: 30vw; color: red; display: none; font-family: MyriadProItalic; font-size: 1.5vw;">*Make sure every field is filled out before submitting*</div>
         </form>
+
+
+        <div style="position: absolute; left: 27%; top: 5vw;">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="857VUCYM69CMQ">
+            <button class="RegistrationButtons" type="submit" name="submit">Click Here To Pay Before You Register</button>
+          </form>
+        </div>
+
+
       </div>
-
-
-
-
     </div>
 
-
-    <!-- JAVASCRIPT FUNCTIONS //-->
-
-
-
-
+    <h1 id="signature" style="position: relative; font-size: 1.5vw; font-family: MyriadProBold; margin-left: 35vw;">- Developed By Ikey Benz -</h1>
   </body>
+
 </html>
