--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
     </div>
 
-    <h1 id="signature" style="position: relative; font-size: 1.5vw; font-family: MyriadProBold; margin-left: 35vw;">- Developed By Ikey Benz -</h1>
+    <h1 id="signature" style="position: relative; font-size: 1.5vw; font-family: MyriadProBold; margin-left: 35vw;">- Programmed By Ikey Benz -</h1>
   </body>
 
 </html>
